[package]
name = "pars"
author= ["Simar Malhotra malhotrasimar009@gmail.com"]
description = "A tool to get list of functions in a python file"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

include= [
"./src/bin/parsv2.rs",
]
[dependencies]
clap = { version = "4.0", features = ["derive"] }
